--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     />
     <!-- custome css  -->
     <link rel="stylesheet" href="styles.css" />
-    <title>Odoh Mmesoma Portfolio</title>
+    <title>Odoh Mmesoma Portfolio Website</title>
 
     <!-- google analytics  -->
     <!-- Google tag (gtag.js) -->
