--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
               <p>My name is Soma&hearts;! I'm a Developer</p>
             </div>
             <div class="text-btn">
-              <a href="https://wa.me/23428100597463" target="_blank"><button class="btn hire-btn" href=>Hire Me</button></a>
+              <a href="https://wa.me/2348163601604" target="_blank"><button class="btn hire-btn" href=>Hire Me</button></a>
               <!-- <a href="https://drive.google.com/file/d/19TboDnRSdPpx_ZJVTjTH0Uzm6_m9UcNb/view?usp=drivesdk" target="_blank"> -->
-                <!-- <button class="btn">
+                <button class="btn">
                   Résumé <i class="uil uil-file"></i>
-                </button> -->
+                </button> 
               </a>
             </div>
             <div class="social-icons">
@@ -230,7 +230,7 @@
                   <i class="uil uil-envelope"></i>Email:
                   Odohmmesoma37@gmail.com
                 </p>
-                <p><i class="uil uil-phone"></i>Phone: +234 8100597463</p>
+                <p><i class="uil uil-phone"></i>Phone: +2348163601604</p>
               </div>
             </div>
             <div class="col">
